/*
 * Copyright James Brown 2023
 * Author: James Brown
 */

plugins {
	id 'java-library'
	id 'io.github.krakowski.jextract' version '0.4.1'
}

repositories {
	mavenCentral()
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(20)
	}
}

jextract {
	header("C:/VulkanSDK/1.3.250.1/Include/vulkan/vulkan.h") {
		libraries = [ 'vulkan' ]
		targetPackage = 'dev.brownjames.lawu.bindings'
		definedMacros = [ 'VK_USE_PLATFORM_WIN32_KHR' ]
		includes = [ 'C:/VulkanSDK/1.3.250.1/Include' ]
		functions = [ 'vkCreateInstance' ]
	}
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += '--enable-preview'
}
